Fix fallthrough in SandboxedUnpacker.

SandboxedUnpacker::MessageCatalogsSanitized() does fall through some
error cases triggering a NOTREACHED.

Bug: 806926,177475
Change-Id: I9aaf62d1197a5885ab8871ca93197c6cb11cfdac
Reviewed-on: https://chromium-review.googlesource.com/891620
Commit-Queue: Nico Weber <thakis@chromium.org>
Reviewed-by: Reilly Grant <reillyg@chromium.org>
Cr-Commit-Position: refs/heads/master@{#532532}
Former-commit-id: 1f54e7ce307438ed784d60b56f84fda1a054cc86